# horror_engine

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  engine.cpp  engine.hpp  engine_struct.hpp  gui.cpp  gui.h  gui.hpp  main.cpp  persistence.cpp  persistence.hpp  runtime.cpp
src/scripts/: player.cpp  player.hpp
